@@ -1,3 +1,12 @@
+2010-07-20  Francois Chouinard  <fchouinard@gmail.com>
+
+	* src/org/eclipse/linuxtools/tmf/component/TmfDataProvider.java:
+		- Use a specific lock object (instead of this) for synchronization
+		- Fix executor exception when request comes in immediately after dispose
+	* src/org/eclipse/linuxtools/tmf/experiment/TmfExperiment.java:
+		- Fix constructor ignoring index page size
+		- Update saved context on parse to avoid unnecessary seeks
+
 2010-07-19  Francois Chouinard  <fchouinard@gmail.com>
 
 	* src/org/eclipse/linuxtools/tmf/experiment/TmfExperiment.java: Some modifications to make the experiment more generic.
